# DroneSwarmsControl

./: README.md  readme.md
src/: alg_demo.py  alg_test.py
src/fq/: package.xml
src/fq/msgs/: ActorAirplane.msg  ActorChangeDirectionInfo.msg  ActorDroneSwarms.msg  ActorEquipments.msg  ActorHitInfo.msg  ActorHitInfos.msg  ActorHumans.msg  ActorVehicle.msg  ActorZone.msg  ActorZones.msg  BaseBaseData.msg  BaseDamageConditionData.msg  BaseKinematicsData.msg  BasePlaneAttr.msg  BaseReconnaissanceData.msg  Header.msg
src/ros2_alg_bridge/: alg_test.py  api.py  build.sh  participant_profile_simple_discovery.xml  ros_entrypoint.sh
src/ros2_alg_bridge/src/alg_demo/: package.xml  setup.cfg  setup.py
src/ros2_alg_bridge/src/alg_demo/alg_demo/: api.py  demo.py  test_pb2.py  test_swarm.py  test_swarm_pub.py  testpb.py
src/ros2_alg_bridge/src/fq/: CMakeLists.txt
src/ros2_alg_bridge/src/fq/msgs/: ActorAirplanes.msg  ActorBuilding.msg  ActorBuildings.msg  ActorChangeDirectionInfos.msg  ActorControlInfo.msg  ActorControlInfos.msg  ActorDroneSwarm.msg  ActorEquipment.msg  ActorHuman.msg  ActorReleaseChaffInfos.msg  ActorVehicles.msg  ActorWarships.msg  BaseBeInterferenceData.msg  BaseBeReconnaissanceData.msg  BaseInterferenceData.msg  BaseLoadData.msg  BaseOrientation3D.msg  BasePose.msg  BaseTargetInfo.msg  BaseZoneAttr.msg
src/ros2_alg_bridge/src/topics/minimal_publisher/: package.xml  setup.cfg  setup.py
src/ros2_alg_bridge/src/topics/minimal_publisher/minimal_publisher/: publisher_member_function.py
src/ros2_alg_bridge/src/topics/minimal_subscriber/: setup.cfg
src/ros2_alg_bridge/src/topics/py_srvcli/: setup.py
src/topics/minimal_subscriber/: package.xml  setup.py
src/topics/minimal_subscriber/minimal_subscriber/: subscriber_member_function.py
src/topics/py_srvcli/: package.xml
src/topics/py_srvcli/py_srvcli/: client_member_function.py  service_member_function.py
